# banner-ai-server

./: .dockerignore  .gitignore  README.md  agent_wokflow.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml
.github/workflows/: docker-ecr-push.yml
config/: __init__.py  db_config.py  env_variables.py  get_db_session.py
core/agent/: banner_image_prompt.py  llm.py  openaiReview.md  product.py  product_agent.py  prompt.py  tools.py  types.py
core/agent/llm/: copy_genration_llm.py  image_genration_llm.py
core/agent/prompt/: banner_genration.py  workflow.md
core/agent/utils/: get_color_by_rgb.py
core/agent/workflow/: banner_generation_workflow.py
core/browser/: browser.py  utils.py
core/browser/js/: extract_headers.js  extract_metadata.js  extract_product_info.js
core/model/: llm.py
core/prompt/: ad_script_prompt.py  banner_image_prompt.py  fashion_prompt.py  product_info_prompt.py
core/scrape/: js_extractor_fn.py  scrapper.py
core/utils/: logger.py
exceptions/: invalid_product_info_error.py
global_type/: product_base.py
middleware/: cors.py
models/: banner_var_model.py
routers/: request_types.py
routers/banner/: banner.py  request_types.py  response_types.py
routers/vedio/: routes.py
service/banner/: banner_service.py  helper.py
services/: banner_service.py  banner_variant_service.py  prompt_factory.py  s3_service.py  s3_storage_service.py  upload_product.py  vedio_service.py
services/utils/: donload_files.py
utils/: consts.py  type_cast.py
