[project]
name = "banner-ai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.16.1",
    "huggingface-hub>=0.30.2",
    "langchain[openai]>=0.3.23",
    "langgraph>=0.4.3",
    "langsmith>=0.3.30",
    "onnxruntime>=1.21.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "rembg>=2.0.65",
    "requests>=2.32.3",
    "webcolors>=24.11.1", # For optimized inference
]
